Bug: Text overflow broken
Working on fix

--- a/css/style.css
+++ b/css/style.css
@@ -43,16 +43,26 @@ body {
     border-radius: 25px;
     font-family: "calc-screen";
     font-size: 40px;
+    white-space: nowrap;
+
+    /*Hide scroll bar on firefox*/
+    scrollbar-width: none;    
+    -ms-overflow-style: none;
+}
+
+.calc-screen::-webkit-scrollbar {
+  display: none;               /* Chrome/Safari */
 }
 
 .calc-screen-inner {
   box-sizing: border-box;
+  white-space: nowrap;
   padding: 16px;
   border: 2px solid #552a3e;
   border-radius: inherit;
   min-width: 100%;
   background-color: #4f5544;
-  text-align: end;
+  text-align: right;
 }
 
 
